cargo-features = ["default-run"]

[package]
name = "stammer"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"
default-run = "main"

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
failure = "0.1.5"
hashbrown = { version = "0.2.1", features = ["serde"] }
structopt = "0.2.15"
jieba-rs = "0.2.6"
pinyin = "0.5.0"
itertools = "0.8.0"
